--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,18 +24,18 @@ jobs:
           echo "sqladmin_username=\"${{ secrets.SQL_USER }}\"" >> terraform.tfvars
           echo "sqladmin_password=\"${{ secrets.SQL_PASS }}\"" >> terraform.tfvars
 
-      - name: Setup tfsec
-        run: |
-            curl -L -o /tmp/tfsec_1.28.13_linux_amd64.tar.gz "https://github.com/aquasecurity/tfsec/releases/download/v1.28.13/tfsec_1.28.13_linux_amd64.tar.gz"
-            tar -xzvf /tmp/tfsec_1.28.13_linux_amd64.tar.gz -C /tmp
-            mv -v /tmp/tfsec /usr/local/bin/tfsec
-            chmod +x /usr/local/bin/tfsec
-      - name: tfsec
-        run: |
-          cd infra
-          /usr/local/bin/tfsec --format=markdown --tfvars-file=terraform.tfvars --out=tfsec.md .
-          echo "## TFSec Output" >> $GITHUB_STEP_SUMMARY
-          cat tfsec.md >> $GITHUB_STEP_SUMMARY
+      # - name: Setup tfsec
+      #   run: |
+      #       curl -L -o /tmp/tfsec_1.28.13_linux_amd64.tar.gz "https://github.com/aquasecurity/tfsec/releases/download/v1.28.13/tfsec_1.28.13_linux_amd64.tar.gz"
+      #       tar -xzvf /tmp/tfsec_1.28.13_linux_amd64.tar.gz -C /tmp
+      #       mv -v /tmp/tfsec /usr/local/bin/tfsec
+      #       chmod +x /usr/local/bin/tfsec
+      # - name: tfsec
+      #   run: |
+      #     cd infra
+      #     /usr/local/bin/tfsec --format=markdown --tfvars-file=terraform.tfvars --out=tfsec.md .
+      #     echo "## TFSec Output" >> $GITHUB_STEP_SUMMARY
+      #     cat tfsec.md >> $GITHUB_STEP_SUMMARY
   
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
