--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure Static Web Apps
 on:
   push:
     branches:
-      - main  # Cambia esto si usas otra rama principal
+      - main  # Cambia si usas otra rama principal
 
 jobs:
   build-and-deploy:
@@ -11,7 +11,7 @@ jobs:
 
     steps:
     - name: 🔹 Checkout código
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: 🔹 Configurar .NET
       uses: actions/setup-dotnet@v3
@@ -20,14 +20,17 @@ jobs:
 
     - name: 🔹 Restaurar dependencias
       run: dotnet restore
+      working-directory: src/ShortenApp  # Ajusta según tu estructura
 
     - name: 🔹 Compilar y publicar Blazor WASM
       run: dotnet publish -c Release -o publish
+      working-directory: src/ShortenApp  # Ajusta según tu estructura
+
+    - name: 🔹 Instalar Azure Static Web Apps CLI
+      run: npm install -g @azure/static-web-apps-cli
 
     - name: 🔹 Desplegar en Azure Static Web Apps
-      uses: Azure/static-web-apps-deploy@v1
-      with:
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_CREDENTIALS }}
-        repo_token: ${{ secrets.GHCR_TOKEN }}
-        action: "upload"
-        app_location: "publish/wwwroot"
+      run: swa deploy ./publish/wwwroot -n upt-swa-153 --env production
+      working-directory: src/ShortenApp  # Ajusta según tu estructura
+      env:
+        AZURE_STATIC_WEB_APPS_API_TOKEN: ${{ secrets.AZURE_CREDENTIALS }}
