--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,9 +27,10 @@ jobs:
     - name: 🔹 Desplegar en Azure Static Web Apps
       uses: Azure/static-web-apps-deploy@v1
       with:
-        azure_static_web_apps_api_token: ${{ secrets.AZURE_CREDENTIALS }}
+        azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         action: "upload"
         app_location: "publish/wwwroot"
+        skip_app_build: true
 
   deploy-backend:
     runs-on: ubuntu-latest
