--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet publish src/ShortenApp -c Release -o publish
 
     - name: 🔹 Desplegar en Azure Static Web Apps
-      uses: Azure/static-web-apps-deploy@v1
+      uses: Azure/static-web-apps-deploy@v2
       with:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         action: "upload"
@@ -49,12 +49,11 @@ jobs:
       run: |
         dotnet publish src/ShortenFunction -c Release -o publish_backend
         cd publish_backend
-        zip -r functionapp.zip .
+        zip -r functionapp.zip * -x "*.git*" -x "*node_modules*" -x "*bin/*" -x "*obj/*"
 
     - name: 🔹 Configurar settings en Azure Functions
       run: |
-        az functionapp config appsettings set -g upt-arg-153 -n upt-afn-153 --settings FUNCTIONS_INPROC_NET8_ENABLED=1
-        az webapp config connection-string set -g upt-arg-153 -n upt-afn-153 -t sqlazure --settings ShortenDB='Data Source=upt-dbs-153.database.windows.net;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASS }};Database=shorten'
+        az webapp config connection-string update -g upt-arg-153 -n upt-afn-153 -t SQLAzure --settings ShortenDB='Data Source=upt-dbs-153.database.windows.net;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASS }};Database=shorten'
 
     - name: 🔹 Desplegar en Azure Functions
       run: |
