--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,7 +3,7 @@ name: Deploy Blazor + Azure Functions
 on:
   push:
     branches:
-      - main  # Cambia esto si usas otra rama principal
+      - main  # Asegúrate de que esta es la rama correcta
 
 jobs:
   build-and-deploy:
@@ -15,7 +15,7 @@ jobs:
     - name: 🔹 Configurar .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 8.0.x  # Usa la versión correcta
+        dotnet-version: 8.0.x  # Asegúrate de usar la versión correcta
 
     # 🚀 DEPLOY DEL FRONTEND (Blazor WASM en Azure Static Web Apps)
     - name: 🔹 Restaurar dependencias
@@ -44,17 +44,24 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    # 🚀 DEPLOY DEL BACKEND (Azure Functions en Azure Function Apps)
-    - name: 🔹 Publicar Azure Functions
-      run: |
-        dotnet publish src/ShortenFunction -c Release -o publish_backend
-        cd publish_backend
-        zip -r functionapp.zip * -x "*.git*" -x "*node_modules*" -x "*bin/*" -x "*obj/*"
-
+    # 🚀 CONFIGURAR SETTINGS EN AZURE FUNCTIONS
     - name: 🔹 Configurar settings en Azure Functions
       run: |
         az webapp config connection-string set -g upt-arg-153 -n upt-afn-153 -t SQLAzure --settings ShortenDB='Data Source=upt-dbs-153.database.windows.net;User ID=${{ secrets.SQL_USER }};Password=${{ secrets.SQL_PASS }};Database=shorten'
 
+    # 🚀 PUBLICAR EL BACKEND (Azure Functions)
+    - name: 🔹 Publicar Azure Functions
+      run: |
+        dotnet publish src/ShortenFunction -c Release -o publish_backend
+        cd publish_backend
+        zip -r functionapp.zip .  # Comprime correctamente
+
     - name: 🔹 Desplegar en Azure Functions
       run: |
         az functionapp deployment source config-zip -g upt-arg-153 -n upt-afn-153 --src publish_backend/functionapp.zip --verbose
+
+    # 🔹 MOSTRAR URL DEL BACKEND
+    - name: 🔹 Mostrar URL del backend
+      run: |
+        BACKEND_URL=$(az functionapp show -g upt-arg-153 -n upt-afn-153 --query "defaultHostName" -o tsv)
+        echo "🔗 La API está disponible en: https://$BACKEND_URL"
