--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,8 +29,8 @@ jobs:
       with:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         action: "upload"
-        app_location: "publish/wwwroot"
-        skip_app_build: true
+        app_location: "src/ShortenApp/wwwroot"
+        # skip_app_build: true
 
   deploy-backend:
     runs-on: ubuntu-latest
