--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         action: "upload"
-        app_location: "src/ShortenApp/wwwroot"
+        app_location: "publish/wwwroot"
         # skip_app_build: true
 
   deploy-backend:
