--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
         azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
         action: "upload"
         app_location: "publish/wwwroot"
-        # skip_app_build: true
+        skip_app_build: true
 
   deploy-backend:
     runs-on: ubuntu-latest
